fix: temp overflow hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,7 @@
 html,
 body {
   max-width: 100dvw;
+  overflow-x: hidden;
 }
 
 body {
